# usa

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  index.html  path_planning.py  pyproject.toml  requirements-dev.txt  requirements-ipynb.txt  requirements.txt  setup.cfg  setup.py  train_usa.py
.github/workflows/: core-checks.yml  publish-package.yml  static.yml
assets/: .gitignore  clean.sh  rsync.sh
assets/chess_stretch/: path_point_cloud.ply  point_cloud.ply
assets/kitchen_stretch/: path_point_cloud.ply  point_cloud.ply
assets/lab_r3d/: path_point_cloud.ply  point_cloud.ply
assets/lab_stretch/: path_point_cloud.ply  point_cloud.ply
assets/replica_apt_3_mnp/: path_point_cloud.ply  point_cloud.ply
assets/studio_r3d/: path_point_cloud.ply  point_cloud.ply
configs/: image_demo.yaml  rl_demo.yaml  template.yaml  train.yaml  usa_net.yaml
css/: style.css
js/: OrbitControls.js  PLYLoader.js  path_lengths.js  semantics.js
notebooks/: .gitignore  01_simple.ipynb  01_train.ipynb  02_custom_dataset.ipynb  03_planner.ipynb  04_pybullet.ipynb  06_lab.ipynb  Makefile  config.yaml  output.ply  test_dataset.py  test_planner.py  train.py
notebooks/04_pybullet_data/: floor.urdf  kitchen_part_right_gen_convex.urdf  table.urdf
project/cpp/: .gitignore  CMakeLists.txt
project/cpp/torch_ops/: CMakeLists.txt  __init__.py  torch_ops.cpp  torch_ops.h
project/cpp/torch_ops/ops/: nucleus_sampling.cpp  nucleus_sampling.h
project/models/: resnet.py  template.py
project/scripts/: cli.py
tests/: conftest.py  test_cpp_extension.py
usa/: .gitignore
(+289 files in other folders)
